# LLM_Usage

./: .gitignore  CLAUDE.md  README.md  environment.yaml  pyproject.toml
.claude/skills/authoring-skills/: SKILL.md
.claude/skills/bash-safety/: SKILL.md
.claude/skills/new-project-setup/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
.claude/skills/prompting-conventions/: SKILL.md
.claude/skills/writing-experiments/: SKILL.md
configs/: config.yaml
configs/paths/: default.yaml  template.yaml
docs/: bash-safety.md  prompting-conventions.md
src/your_package/: __init__.py  main.py
src/your_package/utils/: __init__.py  path_utils.py
